parser.output
   0  $accept : %entry% $end

   1  program : decls EOF

   2  decls :
   3        | decls var_decl
   4        | decls fdecl

   5  stmts :
   6        | stmt_list

   7  stmt_list : stmt
   8            | stmt_list stmt

   9  var_decl : typ ID SEMI

  10  var_decl_list :
  11                | var_decl_list var_decl

  12  fdecl : typ ID LPAREN formals_opt RPAREN LBRACE var_decl_list stmt_list RBRACE

  13  formals_opt :
  14              | formal_list

  15  formal_list : typ ID
  16              | formal_list COMMA typ ID

  17  typ : INT
  18      | FLOAT
  19      | BOOL
  20      | VOID
  21      | STRING

  22  stmt : expr SEMI
  23       | RETURN SEMI
  24       | RETURN expr SEMI
  25       | LBRACE stmt_list RBRACE
  26       | IF LPAREN expr RPAREN stmt
  27       | IF LPAREN expr RPAREN stmt ELSE stmt
  28       | FOR LPAREN expr_opt SEMI expr SEMI expr_opt RPAREN stmt
  29       | WHILE LPAREN expr RPAREN stmt

  30  expr_opt :
  31           | expr

  32  expr : LITERAL
  33       | FLOATLIT
  34       | STRINGLIT
  35       | TRUE
  36       | FALSE
  37       | ID
  38       | expr PLUS expr
  39       | expr MINUS expr
  40       | expr TIMES expr
  41       | expr DIVIDE expr
  42       | expr EQ expr
  43       | expr NEQ expr
  44       | expr LT expr
  45       | expr LEQ expr
  46       | expr GT expr
  47       | expr GEQ expr
  48       | expr AND expr
  49       | expr OR expr
  50       | MINUS expr
  51       | NOT expr
  52       | ID ASSIGN expr
  53       | ID LPAREN actuals_opt RPAREN
  54       | LPAREN expr RPAREN

  55  actuals_opt :
  56              | actuals_list

  57  actuals_list : expr
  58               | actuals_list COMMA expr

  59  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (59)
	decls : .  (2)

	.  reduce 2

	program  goto 3
	decls  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	%entry% : '\001' program .  (59)

	.  reduce 59


state 4
	program : decls . EOF  (1)
	decls : decls . var_decl  (3)
	decls : decls . fdecl  (4)

	INT  shift 5
	FLOAT  shift 6
	BOOL  shift 7
	VOID  shift 8
	STRING  shift 9
	EOF  shift 10
	.  error

	var_decl  goto 11
	fdecl  goto 12
	typ  goto 13


state 5
	typ : INT .  (17)

	.  reduce 17


state 6
	typ : FLOAT .  (18)

	.  reduce 18


state 7
	typ : BOOL .  (19)

	.  reduce 19


state 8
	typ : VOID .  (20)

	.  reduce 20


state 9
	typ : STRING .  (21)

	.  reduce 21


state 10
	program : decls EOF .  (1)

	.  reduce 1


state 11
	decls : decls var_decl .  (3)

	.  reduce 3


state 12
	decls : decls fdecl .  (4)

	.  reduce 4


state 13
	var_decl : typ . ID SEMI  (9)
	fdecl : typ . ID LPAREN formals_opt RPAREN LBRACE var_decl_list stmt_list RBRACE  (12)

	ID  shift 14
	.  error


state 14
	var_decl : typ ID . SEMI  (9)
	fdecl : typ ID . LPAREN formals_opt RPAREN LBRACE var_decl_list stmt_list RBRACE  (12)

	SEMI  shift 15
	LPAREN  shift 16
	.  error


state 15
	var_decl : typ ID SEMI .  (9)

	.  reduce 9


state 16
	fdecl : typ ID LPAREN . formals_opt RPAREN LBRACE var_decl_list stmt_list RBRACE  (12)
	formals_opt : .  (13)

	INT  shift 5
	FLOAT  shift 6
	BOOL  shift 7
	VOID  shift 8
	STRING  shift 9
	RPAREN  reduce 13

	typ  goto 17
	formals_opt  goto 18
	formal_list  goto 19


state 17
	formal_list : typ . ID  (15)

	ID  shift 20
	.  error


state 18
	fdecl : typ ID LPAREN formals_opt . RPAREN LBRACE var_decl_list stmt_list RBRACE  (12)

	RPAREN  shift 21
	.  error


state 19
	formals_opt : formal_list .  (14)
	formal_list : formal_list . COMMA typ ID  (16)

	COMMA  shift 22
	RPAREN  reduce 14


state 20
	formal_list : typ ID .  (15)

	.  reduce 15


state 21
	fdecl : typ ID LPAREN formals_opt RPAREN . LBRACE var_decl_list stmt_list RBRACE  (12)

	LBRACE  shift 23
	.  error


state 22
	formal_list : formal_list COMMA . typ ID  (16)

	INT  shift 5
	FLOAT  shift 6
	BOOL  shift 7
	VOID  shift 8
	STRING  shift 9
	.  error

	typ  goto 24


state 23
	fdecl : typ ID LPAREN formals_opt RPAREN LBRACE . var_decl_list stmt_list RBRACE  (12)
	var_decl_list : .  (10)

	.  reduce 10

	var_decl_list  goto 25


state 24
	formal_list : formal_list COMMA typ . ID  (16)

	ID  shift 26
	.  error


state 25
	var_decl_list : var_decl_list . var_decl  (11)
	fdecl : typ ID LPAREN formals_opt RPAREN LBRACE var_decl_list . stmt_list RBRACE  (12)

	LPAREN  shift 27
	LBRACE  shift 28
	MINUS  shift 29
	NOT  shift 30
	TRUE  shift 31
	FALSE  shift 32
	RETURN  shift 33
	IF  shift 34
	FOR  shift 35
	WHILE  shift 36
	INT  shift 5
	FLOAT  shift 6
	BOOL  shift 7
	VOID  shift 8
	STRING  shift 9
	LITERAL  shift 37
	FLOATLIT  shift 38
	STRINGLIT  shift 39
	ID  shift 40
	.  error

	var_decl  goto 41
	stmt_list  goto 42
	stmt  goto 43
	typ  goto 44
	expr  goto 45


state 26
	formal_list : formal_list COMMA typ ID .  (16)

	.  reduce 16


state 27
	expr : LPAREN . expr RPAREN  (54)

	LPAREN  shift 27
	MINUS  shift 29
	NOT  shift 30
	TRUE  shift 31
	FALSE  shift 32
	LITERAL  shift 37
	FLOATLIT  shift 38
	STRINGLIT  shift 39
	ID  shift 40
	.  error

	expr  goto 46


state 28
	stmt : LBRACE . stmt_list RBRACE  (25)

	LPAREN  shift 27
	LBRACE  shift 28
	MINUS  shift 29
	NOT  shift 30
	TRUE  shift 31
	FALSE  shift 32
	RETURN  shift 33
	IF  shift 34
	FOR  shift 35
	WHILE  shift 36
	LITERAL  shift 37
	FLOATLIT  shift 38
	STRINGLIT  shift 39
	ID  shift 40
	.  error

	stmt_list  goto 47
	stmt  goto 43
	expr  goto 45


state 29
	expr : MINUS . expr  (50)

	LPAREN  shift 27
	MINUS  shift 29
	NOT  shift 30
	TRUE  shift 31
	FALSE  shift 32
	LITERAL  shift 37
	FLOATLIT  shift 38
	STRINGLIT  shift 39
	ID  shift 40
	.  error

	expr  goto 48


state 30
	expr : NOT . expr  (51)

	LPAREN  shift 27
	MINUS  shift 29
	NOT  shift 30
	TRUE  shift 31
	FALSE  shift 32
	LITERAL  shift 37
	FLOATLIT  shift 38
	STRINGLIT  shift 39
	ID  shift 40
	.  error

	expr  goto 49


state 31
	expr : TRUE .  (35)

	.  reduce 35


state 32
	expr : FALSE .  (36)

	.  reduce 36


state 33
	stmt : RETURN . SEMI  (23)
	stmt : RETURN . expr SEMI  (24)

	SEMI  shift 50
	LPAREN  shift 27
	MINUS  shift 29
	NOT  shift 30
	TRUE  shift 31
	FALSE  shift 32
	LITERAL  shift 37
	FLOATLIT  shift 38
	STRINGLIT  shift 39
	ID  shift 40
	.  error

	expr  goto 51


state 34
	stmt : IF . LPAREN expr RPAREN stmt  (26)
	stmt : IF . LPAREN expr RPAREN stmt ELSE stmt  (27)

	LPAREN  shift 52
	.  error


state 35
	stmt : FOR . LPAREN expr_opt SEMI expr SEMI expr_opt RPAREN stmt  (28)

	LPAREN  shift 53
	.  error


state 36
	stmt : WHILE . LPAREN expr RPAREN stmt  (29)

	LPAREN  shift 54
	.  error


state 37
	expr : LITERAL .  (32)

	.  reduce 32


state 38
	expr : FLOATLIT .  (33)

	.  reduce 33


state 39
	expr : STRINGLIT .  (34)

	.  reduce 34


state 40
	expr : ID .  (37)
	expr : ID . ASSIGN expr  (52)
	expr : ID . LPAREN actuals_opt RPAREN  (53)

	LPAREN  shift 55
	ASSIGN  shift 56
	SEMI  reduce 37
	RPAREN  reduce 37
	COMMA  reduce 37
	PLUS  reduce 37
	MINUS  reduce 37
	TIMES  reduce 37
	DIVIDE  reduce 37
	EQ  reduce 37
	NEQ  reduce 37
	LT  reduce 37
	LEQ  reduce 37
	GT  reduce 37
	GEQ  reduce 37
	AND  reduce 37
	OR  reduce 37


state 41
	var_decl_list : var_decl_list var_decl .  (11)

	.  reduce 11


state 42
	stmt_list : stmt_list . stmt  (8)
	fdecl : typ ID LPAREN formals_opt RPAREN LBRACE var_decl_list stmt_list . RBRACE  (12)

	LPAREN  shift 27
	LBRACE  shift 28
	RBRACE  shift 57
	MINUS  shift 29
	NOT  shift 30
	TRUE  shift 31
	FALSE  shift 32
	RETURN  shift 33
	IF  shift 34
	FOR  shift 35
	WHILE  shift 36
	LITERAL  shift 37
	FLOATLIT  shift 38
	STRINGLIT  shift 39
	ID  shift 40
	.  error

	stmt  goto 58
	expr  goto 45


state 43
	stmt_list : stmt .  (7)

	.  reduce 7


state 44
	var_decl : typ . ID SEMI  (9)

	ID  shift 59
	.  error


state 45
	stmt : expr . SEMI  (22)
	expr : expr . PLUS expr  (38)
	expr : expr . MINUS expr  (39)
	expr : expr . TIMES expr  (40)
	expr : expr . DIVIDE expr  (41)
	expr : expr . EQ expr  (42)
	expr : expr . NEQ expr  (43)
	expr : expr . LT expr  (44)
	expr : expr . LEQ expr  (45)
	expr : expr . GT expr  (46)
	expr : expr . GEQ expr  (47)
	expr : expr . AND expr  (48)
	expr : expr . OR expr  (49)

	SEMI  shift 60
	PLUS  shift 61
	MINUS  shift 62
	TIMES  shift 63
	DIVIDE  shift 64
	EQ  shift 65
	NEQ  shift 66
	LT  shift 67
	LEQ  shift 68
	GT  shift 69
	GEQ  shift 70
	AND  shift 71
	OR  shift 72
	.  error


state 46
	expr : expr . PLUS expr  (38)
	expr : expr . MINUS expr  (39)
	expr : expr . TIMES expr  (40)
	expr : expr . DIVIDE expr  (41)
	expr : expr . EQ expr  (42)
	expr : expr . NEQ expr  (43)
	expr : expr . LT expr  (44)
	expr : expr . LEQ expr  (45)
	expr : expr . GT expr  (46)
	expr : expr . GEQ expr  (47)
	expr : expr . AND expr  (48)
	expr : expr . OR expr  (49)
	expr : LPAREN expr . RPAREN  (54)

	RPAREN  shift 73
	PLUS  shift 61
	MINUS  shift 62
	TIMES  shift 63
	DIVIDE  shift 64
	EQ  shift 65
	NEQ  shift 66
	LT  shift 67
	LEQ  shift 68
	GT  shift 69
	GEQ  shift 70
	AND  shift 71
	OR  shift 72
	.  error


state 47
	stmt_list : stmt_list . stmt  (8)
	stmt : LBRACE stmt_list . RBRACE  (25)

	LPAREN  shift 27
	LBRACE  shift 28
	RBRACE  shift 74
	MINUS  shift 29
	NOT  shift 30
	TRUE  shift 31
	FALSE  shift 32
	RETURN  shift 33
	IF  shift 34
	FOR  shift 35
	WHILE  shift 36
	LITERAL  shift 37
	FLOATLIT  shift 38
	STRINGLIT  shift 39
	ID  shift 40
	.  error

	stmt  goto 58
	expr  goto 45


state 48
	expr : expr . PLUS expr  (38)
	expr : expr . MINUS expr  (39)
	expr : expr . TIMES expr  (40)
	expr : expr . DIVIDE expr  (41)
	expr : expr . EQ expr  (42)
	expr : expr . NEQ expr  (43)
	expr : expr . LT expr  (44)
	expr : expr . LEQ expr  (45)
	expr : expr . GT expr  (46)
	expr : expr . GEQ expr  (47)
	expr : expr . AND expr  (48)
	expr : expr . OR expr  (49)
	expr : MINUS expr .  (50)

	.  reduce 50


state 49
	expr : expr . PLUS expr  (38)
	expr : expr . MINUS expr  (39)
	expr : expr . TIMES expr  (40)
	expr : expr . DIVIDE expr  (41)
	expr : expr . EQ expr  (42)
	expr : expr . NEQ expr  (43)
	expr : expr . LT expr  (44)
	expr : expr . LEQ expr  (45)
	expr : expr . GT expr  (46)
	expr : expr . GEQ expr  (47)
	expr : expr . AND expr  (48)
	expr : expr . OR expr  (49)
	expr : NOT expr .  (51)

	.  reduce 51


state 50
	stmt : RETURN SEMI .  (23)

	.  reduce 23


state 51
	stmt : RETURN expr . SEMI  (24)
	expr : expr . PLUS expr  (38)
	expr : expr . MINUS expr  (39)
	expr : expr . TIMES expr  (40)
	expr : expr . DIVIDE expr  (41)
	expr : expr . EQ expr  (42)
	expr : expr . NEQ expr  (43)
	expr : expr . LT expr  (44)
	expr : expr . LEQ expr  (45)
	expr : expr . GT expr  (46)
	expr : expr . GEQ expr  (47)
	expr : expr . AND expr  (48)
	expr : expr . OR expr  (49)

	SEMI  shift 75
	PLUS  shift 61
	MINUS  shift 62
	TIMES  shift 63
	DIVIDE  shift 64
	EQ  shift 65
	NEQ  shift 66
	LT  shift 67
	LEQ  shift 68
	GT  shift 69
	GEQ  shift 70
	AND  shift 71
	OR  shift 72
	.  error


state 52
	stmt : IF LPAREN . expr RPAREN stmt  (26)
	stmt : IF LPAREN . expr RPAREN stmt ELSE stmt  (27)

	LPAREN  shift 27
	MINUS  shift 29
	NOT  shift 30
	TRUE  shift 31
	FALSE  shift 32
	LITERAL  shift 37
	FLOATLIT  shift 38
	STRINGLIT  shift 39
	ID  shift 40
	.  error

	expr  goto 76


state 53
	stmt : FOR LPAREN . expr_opt SEMI expr SEMI expr_opt RPAREN stmt  (28)
	expr_opt : .  (30)

	LPAREN  shift 27
	MINUS  shift 29
	NOT  shift 30
	TRUE  shift 31
	FALSE  shift 32
	LITERAL  shift 37
	FLOATLIT  shift 38
	STRINGLIT  shift 39
	ID  shift 40
	SEMI  reduce 30

	expr  goto 77
	expr_opt  goto 78


state 54
	stmt : WHILE LPAREN . expr RPAREN stmt  (29)

	LPAREN  shift 27
	MINUS  shift 29
	NOT  shift 30
	TRUE  shift 31
	FALSE  shift 32
	LITERAL  shift 37
	FLOATLIT  shift 38
	STRINGLIT  shift 39
	ID  shift 40
	.  error

	expr  goto 79


state 55
	expr : ID LPAREN . actuals_opt RPAREN  (53)
	actuals_opt : .  (55)

	LPAREN  shift 27
	MINUS  shift 29
	NOT  shift 30
	TRUE  shift 31
	FALSE  shift 32
	LITERAL  shift 37
	FLOATLIT  shift 38
	STRINGLIT  shift 39
	ID  shift 40
	RPAREN  reduce 55

	expr  goto 80
	actuals_opt  goto 81
	actuals_list  goto 82


state 56
	expr : ID ASSIGN . expr  (52)

	LPAREN  shift 27
	MINUS  shift 29
	NOT  shift 30
	TRUE  shift 31
	FALSE  shift 32
	LITERAL  shift 37
	FLOATLIT  shift 38
	STRINGLIT  shift 39
	ID  shift 40
	.  error

	expr  goto 83


state 57
	fdecl : typ ID LPAREN formals_opt RPAREN LBRACE var_decl_list stmt_list RBRACE .  (12)

	.  reduce 12


state 58
	stmt_list : stmt_list stmt .  (8)

	.  reduce 8


state 59
	var_decl : typ ID . SEMI  (9)

	SEMI  shift 15
	.  error


state 60
	stmt : expr SEMI .  (22)

	.  reduce 22


state 61
	expr : expr PLUS . expr  (38)

	LPAREN  shift 27
	MINUS  shift 29
	NOT  shift 30
	TRUE  shift 31
	FALSE  shift 32
	LITERAL  shift 37
	FLOATLIT  shift 38
	STRINGLIT  shift 39
	ID  shift 40
	.  error

	expr  goto 84


state 62
	expr : expr MINUS . expr  (39)

	LPAREN  shift 27
	MINUS  shift 29
	NOT  shift 30
	TRUE  shift 31
	FALSE  shift 32
	LITERAL  shift 37
	FLOATLIT  shift 38
	STRINGLIT  shift 39
	ID  shift 40
	.  error

	expr  goto 85


state 63
	expr : expr TIMES . expr  (40)

	LPAREN  shift 27
	MINUS  shift 29
	NOT  shift 30
	TRUE  shift 31
	FALSE  shift 32
	LITERAL  shift 37
	FLOATLIT  shift 38
	STRINGLIT  shift 39
	ID  shift 40
	.  error

	expr  goto 86


state 64
	expr : expr DIVIDE . expr  (41)

	LPAREN  shift 27
	MINUS  shift 29
	NOT  shift 30
	TRUE  shift 31
	FALSE  shift 32
	LITERAL  shift 37
	FLOATLIT  shift 38
	STRINGLIT  shift 39
	ID  shift 40
	.  error

	expr  goto 87


state 65
	expr : expr EQ . expr  (42)

	LPAREN  shift 27
	MINUS  shift 29
	NOT  shift 30
	TRUE  shift 31
	FALSE  shift 32
	LITERAL  shift 37
	FLOATLIT  shift 38
	STRINGLIT  shift 39
	ID  shift 40
	.  error

	expr  goto 88


state 66
	expr : expr NEQ . expr  (43)

	LPAREN  shift 27
	MINUS  shift 29
	NOT  shift 30
	TRUE  shift 31
	FALSE  shift 32
	LITERAL  shift 37
	FLOATLIT  shift 38
	STRINGLIT  shift 39
	ID  shift 40
	.  error

	expr  goto 89


state 67
	expr : expr LT . expr  (44)

	LPAREN  shift 27
	MINUS  shift 29
	NOT  shift 30
	TRUE  shift 31
	FALSE  shift 32
	LITERAL  shift 37
	FLOATLIT  shift 38
	STRINGLIT  shift 39
	ID  shift 40
	.  error

	expr  goto 90


state 68
	expr : expr LEQ . expr  (45)

	LPAREN  shift 27
	MINUS  shift 29
	NOT  shift 30
	TRUE  shift 31
	FALSE  shift 32
	LITERAL  shift 37
	FLOATLIT  shift 38
	STRINGLIT  shift 39
	ID  shift 40
	.  error

	expr  goto 91


state 69
	expr : expr GT . expr  (46)

	LPAREN  shift 27
	MINUS  shift 29
	NOT  shift 30
	TRUE  shift 31
	FALSE  shift 32
	LITERAL  shift 37
	FLOATLIT  shift 38
	STRINGLIT  shift 39
	ID  shift 40
	.  error

	expr  goto 92


state 70
	expr : expr GEQ . expr  (47)

	LPAREN  shift 27
	MINUS  shift 29
	NOT  shift 30
	TRUE  shift 31
	FALSE  shift 32
	LITERAL  shift 37
	FLOATLIT  shift 38
	STRINGLIT  shift 39
	ID  shift 40
	.  error

	expr  goto 93


state 71
	expr : expr AND . expr  (48)

	LPAREN  shift 27
	MINUS  shift 29
	NOT  shift 30
	TRUE  shift 31
	FALSE  shift 32
	LITERAL  shift 37
	FLOATLIT  shift 38
	STRINGLIT  shift 39
	ID  shift 40
	.  error

	expr  goto 94


state 72
	expr : expr OR . expr  (49)

	LPAREN  shift 27
	MINUS  shift 29
	NOT  shift 30
	TRUE  shift 31
	FALSE  shift 32
	LITERAL  shift 37
	FLOATLIT  shift 38
	STRINGLIT  shift 39
	ID  shift 40
	.  error

	expr  goto 95


state 73
	expr : LPAREN expr RPAREN .  (54)

	.  reduce 54


state 74
	stmt : LBRACE stmt_list RBRACE .  (25)

	.  reduce 25


state 75
	stmt : RETURN expr SEMI .  (24)

	.  reduce 24


state 76
	stmt : IF LPAREN expr . RPAREN stmt  (26)
	stmt : IF LPAREN expr . RPAREN stmt ELSE stmt  (27)
	expr : expr . PLUS expr  (38)
	expr : expr . MINUS expr  (39)
	expr : expr . TIMES expr  (40)
	expr : expr . DIVIDE expr  (41)
	expr : expr . EQ expr  (42)
	expr : expr . NEQ expr  (43)
	expr : expr . LT expr  (44)
	expr : expr . LEQ expr  (45)
	expr : expr . GT expr  (46)
	expr : expr . GEQ expr  (47)
	expr : expr . AND expr  (48)
	expr : expr . OR expr  (49)

	RPAREN  shift 96
	PLUS  shift 61
	MINUS  shift 62
	TIMES  shift 63
	DIVIDE  shift 64
	EQ  shift 65
	NEQ  shift 66
	LT  shift 67
	LEQ  shift 68
	GT  shift 69
	GEQ  shift 70
	AND  shift 71
	OR  shift 72
	.  error


state 77
	expr_opt : expr .  (31)
	expr : expr . PLUS expr  (38)
	expr : expr . MINUS expr  (39)
	expr : expr . TIMES expr  (40)
	expr : expr . DIVIDE expr  (41)
	expr : expr . EQ expr  (42)
	expr : expr . NEQ expr  (43)
	expr : expr . LT expr  (44)
	expr : expr . LEQ expr  (45)
	expr : expr . GT expr  (46)
	expr : expr . GEQ expr  (47)
	expr : expr . AND expr  (48)
	expr : expr . OR expr  (49)

	PLUS  shift 61
	MINUS  shift 62
	TIMES  shift 63
	DIVIDE  shift 64
	EQ  shift 65
	NEQ  shift 66
	LT  shift 67
	LEQ  shift 68
	GT  shift 69
	GEQ  shift 70
	AND  shift 71
	OR  shift 72
	SEMI  reduce 31
	RPAREN  reduce 31


state 78
	stmt : FOR LPAREN expr_opt . SEMI expr SEMI expr_opt RPAREN stmt  (28)

	SEMI  shift 97
	.  error


state 79
	stmt : WHILE LPAREN expr . RPAREN stmt  (29)
	expr : expr . PLUS expr  (38)
	expr : expr . MINUS expr  (39)
	expr : expr . TIMES expr  (40)
	expr : expr . DIVIDE expr  (41)
	expr : expr . EQ expr  (42)
	expr : expr . NEQ expr  (43)
	expr : expr . LT expr  (44)
	expr : expr . LEQ expr  (45)
	expr : expr . GT expr  (46)
	expr : expr . GEQ expr  (47)
	expr : expr . AND expr  (48)
	expr : expr . OR expr  (49)

	RPAREN  shift 98
	PLUS  shift 61
	MINUS  shift 62
	TIMES  shift 63
	DIVIDE  shift 64
	EQ  shift 65
	NEQ  shift 66
	LT  shift 67
	LEQ  shift 68
	GT  shift 69
	GEQ  shift 70
	AND  shift 71
	OR  shift 72
	.  error


state 80
	expr : expr . PLUS expr  (38)
	expr : expr . MINUS expr  (39)
	expr : expr . TIMES expr  (40)
	expr : expr . DIVIDE expr  (41)
	expr : expr . EQ expr  (42)
	expr : expr . NEQ expr  (43)
	expr : expr . LT expr  (44)
	expr : expr . LEQ expr  (45)
	expr : expr . GT expr  (46)
	expr : expr . GEQ expr  (47)
	expr : expr . AND expr  (48)
	expr : expr . OR expr  (49)
	actuals_list : expr .  (57)

	PLUS  shift 61
	MINUS  shift 62
	TIMES  shift 63
	DIVIDE  shift 64
	EQ  shift 65
	NEQ  shift 66
	LT  shift 67
	LEQ  shift 68
	GT  shift 69
	GEQ  shift 70
	AND  shift 71
	OR  shift 72
	RPAREN  reduce 57
	COMMA  reduce 57


state 81
	expr : ID LPAREN actuals_opt . RPAREN  (53)

	RPAREN  shift 99
	.  error


state 82
	actuals_opt : actuals_list .  (56)
	actuals_list : actuals_list . COMMA expr  (58)

	COMMA  shift 100
	RPAREN  reduce 56


state 83
	expr : expr . PLUS expr  (38)
	expr : expr . MINUS expr  (39)
	expr : expr . TIMES expr  (40)
	expr : expr . DIVIDE expr  (41)
	expr : expr . EQ expr  (42)
	expr : expr . NEQ expr  (43)
	expr : expr . LT expr  (44)
	expr : expr . LEQ expr  (45)
	expr : expr . GT expr  (46)
	expr : expr . GEQ expr  (47)
	expr : expr . AND expr  (48)
	expr : expr . OR expr  (49)
	expr : ID ASSIGN expr .  (52)

	PLUS  shift 61
	MINUS  shift 62
	TIMES  shift 63
	DIVIDE  shift 64
	EQ  shift 65
	NEQ  shift 66
	LT  shift 67
	LEQ  shift 68
	GT  shift 69
	GEQ  shift 70
	AND  shift 71
	OR  shift 72
	SEMI  reduce 52
	RPAREN  reduce 52
	COMMA  reduce 52


state 84
	expr : expr . PLUS expr  (38)
	expr : expr PLUS expr .  (38)
	expr : expr . MINUS expr  (39)
	expr : expr . TIMES expr  (40)
	expr : expr . DIVIDE expr  (41)
	expr : expr . EQ expr  (42)
	expr : expr . NEQ expr  (43)
	expr : expr . LT expr  (44)
	expr : expr . LEQ expr  (45)
	expr : expr . GT expr  (46)
	expr : expr . GEQ expr  (47)
	expr : expr . AND expr  (48)
	expr : expr . OR expr  (49)

	TIMES  shift 63
	DIVIDE  shift 64
	SEMI  reduce 38
	RPAREN  reduce 38
	COMMA  reduce 38
	PLUS  reduce 38
	MINUS  reduce 38
	EQ  reduce 38
	NEQ  reduce 38
	LT  reduce 38
	LEQ  reduce 38
	GT  reduce 38
	GEQ  reduce 38
	AND  reduce 38
	OR  reduce 38


state 85
	expr : expr . PLUS expr  (38)
	expr : expr . MINUS expr  (39)
	expr : expr MINUS expr .  (39)
	expr : expr . TIMES expr  (40)
	expr : expr . DIVIDE expr  (41)
	expr : expr . EQ expr  (42)
	expr : expr . NEQ expr  (43)
	expr : expr . LT expr  (44)
	expr : expr . LEQ expr  (45)
	expr : expr . GT expr  (46)
	expr : expr . GEQ expr  (47)
	expr : expr . AND expr  (48)
	expr : expr . OR expr  (49)

	TIMES  shift 63
	DIVIDE  shift 64
	SEMI  reduce 39
	RPAREN  reduce 39
	COMMA  reduce 39
	PLUS  reduce 39
	MINUS  reduce 39
	EQ  reduce 39
	NEQ  reduce 39
	LT  reduce 39
	LEQ  reduce 39
	GT  reduce 39
	GEQ  reduce 39
	AND  reduce 39
	OR  reduce 39


state 86
	expr : expr . PLUS expr  (38)
	expr : expr . MINUS expr  (39)
	expr : expr . TIMES expr  (40)
	expr : expr TIMES expr .  (40)
	expr : expr . DIVIDE expr  (41)
	expr : expr . EQ expr  (42)
	expr : expr . NEQ expr  (43)
	expr : expr . LT expr  (44)
	expr : expr . LEQ expr  (45)
	expr : expr . GT expr  (46)
	expr : expr . GEQ expr  (47)
	expr : expr . AND expr  (48)
	expr : expr . OR expr  (49)

	.  reduce 40


state 87
	expr : expr . PLUS expr  (38)
	expr : expr . MINUS expr  (39)
	expr : expr . TIMES expr  (40)
	expr : expr . DIVIDE expr  (41)
	expr : expr DIVIDE expr .  (41)
	expr : expr . EQ expr  (42)
	expr : expr . NEQ expr  (43)
	expr : expr . LT expr  (44)
	expr : expr . LEQ expr  (45)
	expr : expr . GT expr  (46)
	expr : expr . GEQ expr  (47)
	expr : expr . AND expr  (48)
	expr : expr . OR expr  (49)

	.  reduce 41


state 88
	expr : expr . PLUS expr  (38)
	expr : expr . MINUS expr  (39)
	expr : expr . TIMES expr  (40)
	expr : expr . DIVIDE expr  (41)
	expr : expr . EQ expr  (42)
	expr : expr EQ expr .  (42)
	expr : expr . NEQ expr  (43)
	expr : expr . LT expr  (44)
	expr : expr . LEQ expr  (45)
	expr : expr . GT expr  (46)
	expr : expr . GEQ expr  (47)
	expr : expr . AND expr  (48)
	expr : expr . OR expr  (49)

	PLUS  shift 61
	MINUS  shift 62
	TIMES  shift 63
	DIVIDE  shift 64
	LT  shift 67
	LEQ  shift 68
	GT  shift 69
	GEQ  shift 70
	SEMI  reduce 42
	RPAREN  reduce 42
	COMMA  reduce 42
	EQ  reduce 42
	NEQ  reduce 42
	AND  reduce 42
	OR  reduce 42


state 89
	expr : expr . PLUS expr  (38)
	expr : expr . MINUS expr  (39)
	expr : expr . TIMES expr  (40)
	expr : expr . DIVIDE expr  (41)
	expr : expr . EQ expr  (42)
	expr : expr . NEQ expr  (43)
	expr : expr NEQ expr .  (43)
	expr : expr . LT expr  (44)
	expr : expr . LEQ expr  (45)
	expr : expr . GT expr  (46)
	expr : expr . GEQ expr  (47)
	expr : expr . AND expr  (48)
	expr : expr . OR expr  (49)

	PLUS  shift 61
	MINUS  shift 62
	TIMES  shift 63
	DIVIDE  shift 64
	LT  shift 67
	LEQ  shift 68
	GT  shift 69
	GEQ  shift 70
	SEMI  reduce 43
	RPAREN  reduce 43
	COMMA  reduce 43
	EQ  reduce 43
	NEQ  reduce 43
	AND  reduce 43
	OR  reduce 43


state 90
	expr : expr . PLUS expr  (38)
	expr : expr . MINUS expr  (39)
	expr : expr . TIMES expr  (40)
	expr : expr . DIVIDE expr  (41)
	expr : expr . EQ expr  (42)
	expr : expr . NEQ expr  (43)
	expr : expr . LT expr  (44)
	expr : expr LT expr .  (44)
	expr : expr . LEQ expr  (45)
	expr : expr . GT expr  (46)
	expr : expr . GEQ expr  (47)
	expr : expr . AND expr  (48)
	expr : expr . OR expr  (49)

	PLUS  shift 61
	MINUS  shift 62
	TIMES  shift 63
	DIVIDE  shift 64
	SEMI  reduce 44
	RPAREN  reduce 44
	COMMA  reduce 44
	EQ  reduce 44
	NEQ  reduce 44
	LT  reduce 44
	LEQ  reduce 44
	GT  reduce 44
	GEQ  reduce 44
	AND  reduce 44
	OR  reduce 44


state 91
	expr : expr . PLUS expr  (38)
	expr : expr . MINUS expr  (39)
	expr : expr . TIMES expr  (40)
	expr : expr . DIVIDE expr  (41)
	expr : expr . EQ expr  (42)
	expr : expr . NEQ expr  (43)
	expr : expr . LT expr  (44)
	expr : expr . LEQ expr  (45)
	expr : expr LEQ expr .  (45)
	expr : expr . GT expr  (46)
	expr : expr . GEQ expr  (47)
	expr : expr . AND expr  (48)
	expr : expr . OR expr  (49)

	PLUS  shift 61
	MINUS  shift 62
	TIMES  shift 63
	DIVIDE  shift 64
	SEMI  reduce 45
	RPAREN  reduce 45
	COMMA  reduce 45
	EQ  reduce 45
	NEQ  reduce 45
	LT  reduce 45
	LEQ  reduce 45
	GT  reduce 45
	GEQ  reduce 45
	AND  reduce 45
	OR  reduce 45


state 92
	expr : expr . PLUS expr  (38)
	expr : expr . MINUS expr  (39)
	expr : expr . TIMES expr  (40)
	expr : expr . DIVIDE expr  (41)
	expr : expr . EQ expr  (42)
	expr : expr . NEQ expr  (43)
	expr : expr . LT expr  (44)
	expr : expr . LEQ expr  (45)
	expr : expr . GT expr  (46)
	expr : expr GT expr .  (46)
	expr : expr . GEQ expr  (47)
	expr : expr . AND expr  (48)
	expr : expr . OR expr  (49)

	PLUS  shift 61
	MINUS  shift 62
	TIMES  shift 63
	DIVIDE  shift 64
	SEMI  reduce 46
	RPAREN  reduce 46
	COMMA  reduce 46
	EQ  reduce 46
	NEQ  reduce 46
	LT  reduce 46
	LEQ  reduce 46
	GT  reduce 46
	GEQ  reduce 46
	AND  reduce 46
	OR  reduce 46

